# TUIDash

./: .env.example  .gitignore  notes.md  pyproject.toml  readme.md  run.py
.github/workflows/: release.yml
src/: __init__.py  app.py  config.py
src/services/: __init__.py  ferry_service.py  kitsap_ferry_service.py  tides_service.py  weather_service.py
src/widgets/: __init__.py  ferry.py  notes.py  tides.py  weather.py
