[project]
name = "tuidash"
version = "0.1.0"
description = "Ambient TUI dashboard showing weather, tides, ferry times, and calendar"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.27.0",
    "msal>=1.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
tuidash = "src.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
